圖表文字斷行修正

--- a/policies/housing-policy.html.slim
+++ b/policies/housing-policy.html.slim
@@ -67,13 +67,13 @@
     .multi-col-content.house-pp-chart
       .multi-col-content-inner
         .col-3-content
-          p.text-center 全國空屋數高達 156 萬戶
+          p.text-center 全國空屋數<br>高達 156 萬戶
           .empty-house-data
         .col-3-content
-          p.text-center 以用電度數保守推估低度使用住宅
+          p.text-center 以用電度數保守推估<br>低度使用住宅
           .electric-house-data
         .col-3-content
-          p.text-center 房屋自有率高於其他已開發國家 50%
+          p.text-center 房屋自有率<br>高於其他已開發國家 50%
           .self-house-data
 
     .center-content
