讓 submenu 支援原生 iOS touch scroll

--- a/sass/partial/_sub-menu.scss
+++ b/sass/partial/_sub-menu.scss
@@ -16,6 +16,7 @@
     text-align: center;
     @include nowrap;
     @include adjust-font-size-to(13px);
+    -webkit-overflow-scrolling: touch;
   }
 
 
