--- a/policies/food-safely.html.slim
+++ b/policies/food-safely.html.slim
@@ -45,14 +45,14 @@
     .center-content
       ol.text-content.order-list
         li.animation.fade-in
-          h4.section-sub-title 危害防堵：「從海關到馬桶」全面防堵
-          p 傳統的「食品衛生管理」思維僅針對食品生產過程當中，特定生產階段完成後的監督；「食品安全」則是「從農場到馬桶」，從原料的海關品質就開始管控，到食用後的健康影響，都要包括進去，徹底完成生產過程中可能產生的危害予以防堵。
+          h4.section-sub-title 全面性的食安思維：「從農場到馬桶」
+          p 傳統的「食品衛生管理」僅針對食品生產過程中，特定階段完成後的監督；「食品安全」的觀念則必須要擴大成為「從農場到馬桶」，從原料的海關品質就開始管控，到食用後的健康影響，都要包括進去，徹底完成生產過程中可能產生的危害予以防堵。
         li.animation.fade-in
-          h4.section-sub-title 風險管理： 「從衛生署到環保署」跨機關管理
-          p 從近年造成食安危機的原因來看，主要都發生在「食品衛生管理」管不到的地方。由此可知食品衛生管理的措施，尚無法遏止食安危機再次發生。而「食品安全」則是跨機關合作，兼具質量、具全面性、通盤性。
+          h4.section-sub-title 將風險概念納入政府機關的食安管理當中
+          p 目前權責歸屬不同機關的食安管理方式，已經不足以解決食安問題，我們認為不僅應該納入跨機關的整體食安思考，亦必須納入風險評估、風險管理與風險溝通的觀念，來思考不同食品風險型態下，應該採取的管理方式，以及權責區別。
         li.animation.fade-in
-          h4.section-sub-title 全面性瞭解：「從法律到醫療」綜合風險管理
-          p 「食品衛生管理」重視規範與執行後的明確成效；「食品安全」則是從根本性、系統性、更廣泛的角度，去瞭解食品生產流程可能牽涉到的風險。具體而言，則包括從法制、貿易、毒理學、公共政策、廠商內外部管理、溝通、風險評估到醫療等諸多面向。
+          h4.section-sub-title 全面性瞭解：「從法律到醫療」
+          p 從根本性、系統性、更廣泛的角度，去瞭解食品生產流程可能牽涉到的風險。具體而言，則包括從法制、貿易、毒理學、公共政策、廠商內外部管理、溝通、風險評估到醫療等諸多面向。
 
   .section-class.gray-block.scroll-spy-section#section-2 data-spy-index="2"
     span.animation.fade-in 原因
@@ -83,22 +83,22 @@
         li.fade-in.delay-800ms
           span.time 2013
           span.dot: img src="/images/policies_image/food_safely/fs1_5.png"
-          .timeline-content: p 毒澱粉肆虐、胖達人香精麵包、山水劣質米混充台灣米、食用油混充銅葉綠素、毒醬油、豆乾使用油漆染料「皂黃」
+          .timeline-content: p 毒澱粉肆虐、香精麵包、劣質米混充台灣米、食用油混充銅葉綠素、毒醬油、豆乾使用油漆染料「皂黃」
         li.fade-in.delay-1000ms
           span.time 2014
           span.dot: img src="/images/policies_image/food_safely/fs1_6.png"
-          .timeline-content: p 強冠餿水油、正義黑心油、頂新黑心油、吊白塊潤餅皮、工業用碳酸鎂胃藥、農藥超標手搖飲料、重金屬鼎王火鍋、雞蛋殘留抗生素、洗腎藥桶裝仙草
+          .timeline-content: p 餿水油、黑心油、吊白塊潤餅皮、工業用碳酸鎂胃藥、農藥超標手搖飲料、重金屬火鍋、雞蛋殘留抗生素、洗腎藥桶裝仙草
         li.fade-in.delay-1200ms
           span.time 2015
           span.dot: img src="/images/policies_image/food_safely/fs1_7.png"
-          .timeline-content: p 一心防腐劑豆乾、吊白塊潤餅皮、黑心海帶、農藥超標手搖茶、碳酸鎂胡椒粉、孔雀綠蒲燒鰻、藥用石膏米血糕
+          .timeline-content: p 防腐劑豆乾、吊白塊潤餅皮、海帶、農藥超標手搖茶、碳酸鎂胡椒粉、孔雀綠蒲燒鰻、藥用石膏米血糕
 
       .text-content
         h3.section-title 食安問題根源
       ol.text-content.order-list
         li.animation.fade-in
           h4.section-sub-title 標章很多
-          p 現行複雜的多種農產品及食品認驗證及標章制度、作業規範（如CAS、GAP、TGAP、TAP、OTAP、UTAP等），共有十八種國家認證標章，連專家、學者、業者都不易釐清，急需進行制度的簡化作業。
+          p 現行複雜的多種農產品及食品認驗證及標章制度、作業規範（如CAS、GAP、TGAP、TAP、OTAP、UTAP等），共有十八種國家認證標章。
         li.animation.fade-in
           h4.section-sub-title 主管很多
           p 台灣的食安管理依照不同的主管項目，分別由衛生署、農委會、甚至經濟部、教育部、國防部與環保署等多個機關負責。容易產生業務重疊等現象。遇到食安問題，難以判斷問題源頭、負責機關，容易產生灰色地帶、相互推卸責任的現象。
@@ -142,7 +142,7 @@
           img.image.animation.fade-in src="/images/policies_image/food_safely/fs4_1.png"
           .text-content.animation.fade-in
             h4.section-sub-title  國家認證標章
-            p 傳統「食品衛生管理」制度，只求末端產品要乾淨、安全、農藥無殘留，但這其實只是基本款(GHP, The Regulations on Good Hygiene Practice for Food)。食品與農產品要進一步從生產開始把關，要求從源頭、看流程的國際標準來執行，採納如HACCP（Hazard Analysis and Critical Control Points食品安全管理系統）TGAP(Taiwan Good Agricultural Product)、ISO22000等更為嚴格的生產規範。
+            p 傳統「食品衛生管理」制度，只求末端產品要乾淨、安全、農藥無殘留，但這其實只是基本款(GHP, The Regulations on Good Hygiene Practice for Food)。食品與農產品要進一步從生產開始把關，要求從源頭、看流程的國際標準來執行，採納如HACCP（Hazard Analysis and Critical Control Points食品安全管理系統）TGAP(Taiwan Good Agricultural Product)、ISO22000以及風險評估機制等更為嚴格的生產規範。
         .col-3-content
           img.image.animation.fade-in.delay-200ms src="/images/policies_image/food_safely/fs4_2.png"
           .text-content.animation.fade-in.delay-200ms
@@ -153,26 +153,21 @@
           .text-content.animation.fade-in.delay-400ms
             h4.section-sub-title 進口自產全面把關
             p <strong>進口部分：</strong><br>我國食品來源有70％仰賴國外進口，國外進口（完成品）食品、農品做好邊境查驗，管控以海關查驗為主。未來將修改相關辦法，（大部分由業者自主管理，部份重要產品則需安全標示+海關查驗）貿易商檢付農產品之安全標示。
-            p <strong>自產部分：</strong><br>我國食物來源另有30％為國內生產，將全面檢視農地及工廠生產過程，嚴密監控水源品質，並管理農民使用化學農藥及肥料的耕作型態。並以灌排分離作法減少重金屬汙染、防止其他毒物物質傷害農地，淨化水土資源、掌握用藥品質。此外，推廣植物醫生以及友善環境耕作方法，以保護可供永續生產的水源、土壤。
+            p <strong>自產部分：</strong><br>針對國內生產部分，將全面檢視農地及工廠生產過程，嚴密監控水源品質，並管理農民使用化學農藥及肥料的耕作型態。並以灌排分離作法減少重金屬汙染、防止其他毒物物質傷害農地，淨化水土資源、掌握用藥品質。此外，推廣植物醫生以及友善環境耕作方法，以保護可供永續生產的水源、土壤。
 
   .section
     .center-content
       .text-content
         h4.section-sub-title 第三環：十倍查驗、十倍安全、百倍幸福
         p.text-center 為甚麼需要增加檢驗量？因為不合格率仍然很高！
-      .figure.animation.fade-in
-        img src="/images/policies_image/food_safely/chart_pesticide_check_result.svg"
       .text-content
         ol.todo-list
           li.animation.fade-in
             h4.section-sub-title 提高進口農產品查驗件數
-            p 提高進口農產品查驗件數，由目前的平均1萬件至10萬件，經費由1.6億增加為16億元。
+            p 提高進口農產品查驗件數，由目前的平均1萬件至10萬件。
           li.animation.fade-in
             h4.section-sub-title 提高國內農產品檢驗件數
-            p 上市前的農產品農藥殘留檢驗，由目前每年平均1萬件增加至10萬件(約3億元)；上市後的農產品農藥殘留檢驗由目前的2000件增加至2萬件；重金屬污染查驗件數增加為每年1萬件以上(約7000萬元)。
-          li.animation.fade-in
-            h4.section-sub-title 抽驗執行
-            p 目前除了中央附屬的衛生單位以外，民間有57間（加上食藥署有北中南10間，共67間）認證實驗室，其檢驗的品質與結果，將會經過國際實驗室標準定期、嚴格的把關。先前的食安危機當中，就已經扮演相當重要的角色，單日檢驗件數可以達到2000件之多；未來在增加抽驗件數之後，這些民間實驗室的檢驗能量將更有效發揮。小英政府將更為重視這些實驗室的檢驗能量與檢驗品質，使這些實驗室不僅是食安危機的補破網，更要對未來檢驗的人力與人才培養，承擔起積極的責任。
+            p 上市前的農產品農藥殘留檢驗，由目前每年平均1萬件增加至10萬件；上市後的農產品農藥殘留檢驗由目前的2000件增加至2萬件；重金屬污染查驗件數增加為每年1萬件以上。
           li.animation.fade-in
             h4.section-sub-title 跨縣市稽查
             p 2014年底（11月12日）啟動跨縣市食品安全聯合平台，展開食安跨縣市聯合稽查，達到「聯合稽查，成效加倍，無所遁形」的效果。
