--- a/sass/all.scss
+++ b/sass/all.scss
@@ -24,6 +24,7 @@
 
 // ==== partial ====
 // @import "partial/guideline-header"; // guideline 專用
+@import "partial/off-canvas";
 @import "partial/header";
 @import "partial/sub-menu";
 @import "partial/hero";
