--- a/sass/partial/_header.scss
+++ b/sass/partial/_header.scss
@@ -1,7 +1,4 @@
 .header {
-  // @include pie-clearfix;
-  // background-color: white;
-  // border-bottom: 1px solid #ddd;
 
   .header-inner {
     @include box-sizing(border-box);
@@ -9,7 +6,6 @@
     max-width: 1512px;
     width: 100%;
     margin: 0 auto;
-    // padding: 0 24px;
     background-color: white;
     border-bottom: 1px solid #ddd;
   }
@@ -51,7 +47,6 @@
     width: 100%;
     height: 3px;
     background-color: #ccc;
-    // @include transition(background-color 0.25s);
     &:before, &:after {
       content: '';
       position: absolute;
@@ -59,7 +54,6 @@
       width: 100%;
       height: 3px;
       background-color: #ccc;
-      // @include transition(background-color 0.5s, transform .5s);
     }
     &:before{
       top: -8px;
@@ -74,7 +68,7 @@
       top: 50%;
       left: 50%;
       margin: -1.5px 0 0 -50%;
-      background-color: white;
+      // background-color: white;
     }
     &:before {
       @include transform( rotate(45deg) );
@@ -87,16 +81,17 @@
   .menu {
     position: fixed;
     top: 0;
-    left: 0;
     right: 0;
     bottom: 0;
+    width: 260px;
     @include box-sizing(border-box);
     z-index: 200;
-    visibility:hidden;
-    opacity:0;
-    @include transition(visibility 0s 0.5s, opacity 0.5s);
+    // visibility:hidden;
+    // opacity:0;
+    // @include transition(visibility 0s 0.5s, opacity 0.5s);
+    @include translateX(260px);
     text-align: center;
-    background-color: #225253;
+    background-color: #183840;
     @include adjust-font-size-to(15px);
     &.is-mobile {
       display: none;
@@ -107,6 +102,7 @@
     padding: 24px 24px 0;
     height: 100%;
     overflow: auto;
+    -webkit-overflow-scrolling: touch;
   }
   .menu-logo {
     display: block;
@@ -126,14 +122,6 @@
     li {
       @include leader(1);
       position: relative;
-      // &:before {
-      //   content: '';
-      //   display: block;
-      //   width: 24px;
-      //   height: 1px;
-      //   background-color: rgba(white, 0.25);
-      //   margin: 12px auto;
-      // }
     }
     a {
       display: block;
@@ -404,10 +392,8 @@
       border-left: 1px solid #eaeaea;
     }
     .social-nav {
-      // border: 1px solid #eaeaea;
       border-top: none;
       border-right: 1px solid #eaeaea;
-      // border-bottom: none;
       float: left;
       font-size: 16px;
       padding: 0 4px 0 6px;
@@ -480,33 +466,4 @@
     }
   }
 
-}
-
-// open menu
-.is-open-menu {
-  height: 100%;
-  body, .page-outer {
-    height: 100%;
-  }
-  .page-outer {
-    overflow: hidden;
-  }
-  .header {
-    .menu {
-      visibility:visible;
-      opacity:1;
-      transition-delay:0s;
-      display: block !important;
-    }
-  }
-
-  @include at-breakpoint($desktop) {
-    height: auto;
-    body, .page-outer {
-      height: auto;
-    }
-    .page-outer {
-      overflow: visible;
-    }
-  }
 }
