--- a/stylesheets/all.css
+++ b/stylesheets/all.css
@@ -1152,6 +1152,7 @@ body { background-color: #183840; position: relative; }
 .policies-page .faq-list .answer:before { content: "A"; color: #50b584; }
 .policies-page .order-list, .policies-page .todo-list { list-style: none; }
 .policies-page .order-list li, .policies-page .todo-list li { position: relative; margin-top: 24px; padding-left: 36px; text-align: left; }
+.policies-page .order-list li.col-2-content, .policies-page .order-list li.col-3-content, .policies-page .todo-list li.col-2-content, .policies-page .todo-list li.col-3-content { padding: 0 24px 0 36px; }
 .policies-page .order-list li .section-title, .policies-page .order-list li .section-sub-title, .policies-page .todo-list li .section-title, .policies-page .todo-list li .section-sub-title { margin-bottom: 12px; }
 .policies-page .order-list li:before, .policies-page .todo-list li:before { position: absolute; left: -4px; padding-right: 3px; width: 31px; font-family: "DINWebPro", "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Light", "STHeitiTC-Light", "Microsoft JhengHei", sans-serif; text-align: right; font-size: 31px; font-weight: bold; line-height: 38px; letter-spacing: -2px; color: #50b584; background: -webkit-linear-gradient(120deg, #e7e879, #50b584); -webkit-background-clip: text; -webkit-text-fill-color: transparent; }
 .policies-page .order-list li li, .policies-page .todo-list li li { margin-top: 0px; margin-bottom: 12px; padding-left: 0; }
@@ -1181,8 +1182,10 @@ body { background-color: #183840; position: relative; }
 .policies-page .todo-list li:before { content: ""; top: auto; width: 36px; height: 36px; background-image: url('/images/todo-item-style.png?1440754780'); background-image: none, url('/images/todo-item-style.svg?1440754780'); background-position: center; background-repeat: no-repeat; background-clip: initial; -webkit-background-clip: initial; }
 @media (min-width: 640px) { .policies-page .order-list li { margin-top: 48px; padding-left: 56px; }
   .policies-page .order-list li:before { left: -4px; width: 48px; font-size: 48px; line-height: 56px; }
+  .policies-page .order-list li.col-2-content, .policies-page .order-list li.col-3-content { padding: 0 24px 0 54px; }
   .policies-page .todo-list li { margin-top: 48px; padding-left: 56px; }
-  .policies-page .todo-list li:before { left: 4px; } }
+  .policies-page .todo-list li:before { left: 4px; }
+  .policies-page .todo-list li.col-2-content, .policies-page .todo-list li.col-3-content { padding: 0 24px 0 54px; } }
 .policies-page .timeline { overflow: hidden; padding-bottom: 24px; list-style: none; text-align: left; }
 .policies-page .timeline li { overflow: hidden; }
 .policies-page .timeline li:after { content: ""; display: table; clear: both; }
